fix(package) : 파일 패키지 생성 및 이동

--- a/app/src/main/res/layout/activity_chat_list.xml
+++ b/app/src/main/res/layout/activity_chat_list.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.overman.main.presenter.view.main.TodoViewModel" />
+            type="com.overman.main.presenter.view.todo.TodoViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
