fix(main) : 탭, 뷰페이저 관련 코드 추가

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -66,5 +66,6 @@
     <color name="c_ff6177">#ff6177</color>
     <color name="c_ffba08">#ffba08</color>
     <color name="c_ff8d60">#ff8d60</color>
+    <color name="c_5e5050">#5e5050</color>
 
 </resources>
