--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/purple_500">
+        android:layout_height="match_parent" >
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/tbToolbar"
