fix(main) : 리사이클러 뷰 바인딩 클래스 추가

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,7 +9,10 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvHomeItem"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            app:spanCount="@{2}"
+            app:spacing="@{25}"
+            app:includeEdge="@{true}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
