--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
@@ -25,21 +26,33 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="120dp" >
+        android:layout_height="130dp"
+        android:padding="5dp" >
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:id="@+id/ivItemImg"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            app:profileImg=""
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/tvItemText"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            tools:src="@drawable/img_empty" />
 
         <TextView
-            android:layout_width="match_parent"
+            android:id="@+id/tvItemText"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@{homeListData.title}"
             android:gravity="center"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toEndOf="@id/ivItemImg"
+            tools:text="타이틀1"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
