--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -33,7 +33,7 @@
             android:id="@+id/ivItemImg"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
-            app:profileImg=""
+            android:src="@drawable/img_empty"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
