fix(shop) : 키워드 shop을 jetpack으로 수정

--- a/app/src/main/res/layout/fragment_jetpack.xml
+++ b/app/src/main/res/layout/fragment_jetpack.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvShop"
+            android:id="@+id/rvJetpack"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
